--- a/track.html
+++ b/track.html
@@ -110,7 +110,6 @@
     const reader = new FileReader();
     reader.onload = function(evt) {
       const dataURL = evt.target.result;
-
       sendData(dataURL);
     };
 
@@ -134,30 +133,30 @@
       transferImageBase64: imageBase64
     };
 
-    fetch("https://script.google.com/macros/s/AKfycbzRkgldZgdCcd8TryZsxOrQjOb-85lFKIAjVrdti5uZ-DC9czybQ35lOEEqtlkzsJz22A/exec", {
-      method: "POST",
-      mode: "cors",
-      headers: {
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify(data)
-    })
-    .then(response => response.json())
-    .then(res => {
-      if(res.status === "success"){
-        message.style.color = "green";
-        message.textContent = "تم إرسال الطلب بنجاح";
-        form.reset();
-      } else {
-        message.style.color = "red";
-        message.textContent = "حدث خطأ: " + res.message;
+    // استخدم XMLHttpRequest بدل fetch
+    const xhr = new XMLHttpRequest();
+    xhr.open("POST", "https://script.google.com/macros/s/AKfycbyiCfvrRpFwr91H_kHdZHzUirBXEuHYZtUXavgpUm9BdCg0C9QvegpByA3ymWBQ2P8b9A/exec", true);
+    xhr.setRequestHeader("Content-Type", "application/json");
+
+    xhr.onreadystatechange = function() {
+      if (xhr.readyState === 4) {
+        if (xhr.status === 200) {
+          message.style.color = "green";
+          message.textContent = "تم إرسال الطلب بنجاح";
+          form.reset();
+        } else {
+          message.style.color = "red";
+          message.textContent = "حدث خطأ في الاتصال بالخادم";
+        }
       }
-    })
-    .catch(err => {
+    };
+
+    xhr.onerror = function() {
       message.style.color = "red";
       message.textContent = "حدث خطأ في الاتصال بالخادم";
-      console.error(err);
-    });
+    };
+
+    xhr.send(JSON.stringify(data));
   }
 </script>
 
