--- a/track.html
+++ b/track.html
@@ -2,7 +2,8 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <title>منتجات شراء مع فيديو داخل الكارت</title>
+  <title>منتجات مع خلفية Lottie وكروت فيديو</title>
+  <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo&display=swap');
 
@@ -15,46 +16,62 @@
       padding: 0;
       height: 100%;
       font-family: 'Cairo', sans-serif;
-      background: url('https://media.giphy.com/media/26ufdipQqU2lhNA4g/giphy.gif') no-repeat center center fixed;
-      background-size: cover;
       overflow-x: hidden;
+      background: #000; /* اسود خلفية احتياطية */
       color: white;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
       padding: 20px;
+      min-height: 100vh;
+      position: relative;
+    }
+
+    /* الخلفية Lottie */
+    dotlottie-wc {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      width: 100vw !important;
+      height: 100vh !important;
+      transform: translate(-50%, -50%);
+      z-index: -1;
+      opacity: 0.15;
+      pointer-events: none;
+      user-select: none;
     }
 
     .container {
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-      justify-content: center;
-      max-width: 1200px;
       width: 100%;
+      max-width: 400px;
+      display: flex;
+      flex-direction: column;
+      gap: 25px;
+      padding-bottom: 40px;
     }
 
     .card {
       background: rgba(0,0,0,0.6);
       border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.7);
-      width: 320px;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.9);
       cursor: pointer;
       overflow: hidden;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
       display: flex;
       flex-direction: column;
+      width: 100%;
     }
 
     .card:hover {
-      transform: scale(1.07);
-      box-shadow: 0 12px 30px rgba(255, 255, 255, 0.5);
+      transform: scale(1.05);
+      box-shadow: 0 15px 40px rgba(255, 255, 255, 0.5);
+      z-index: 10;
     }
 
     .video-wrapper {
       position: relative;
       width: 100%;
-      height: 180px;
+      height: 220px;
       overflow: hidden;
       border-top-left-radius: 20px;
       border-top-right-radius: 20px;
@@ -75,32 +92,30 @@
     .info {
       padding: 20px;
       text-align: center;
-      flex-grow: 1;
       display: flex;
       flex-direction: column;
       justify-content: center;
+      gap: 12px;
     }
 
     .title {
-      font-size: 1.4rem;
+      font-size: 1.6rem;
       font-weight: 700;
-      margin-bottom: 12px;
     }
 
     .price {
-      font-size: 1.8rem;
+      font-size: 2.2rem;
       font-weight: 900;
       color: #ffcc00;
-      margin-bottom: 20px;
     }
 
     .buy-btn {
       background: #ffcc00;
       color: #222;
-      padding: 12px 0;
-      border-radius: 12px;
+      padding: 14px 0;
+      border-radius: 15px;
       font-weight: 700;
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       transition: background 0.3s ease;
       user-select: none;
     }
@@ -109,37 +124,45 @@
       background: #ffaa00;
     }
 
-    /* Responsive */
-    @media (max-width: 1000px) {
-      .container {
-        gap: 15px;
+    @media (max-width: 480px) {
+      body, html {
+        padding: 15px 10px;
       }
-      .card {
-        width: 280px;
-      }
-      .video-wrapper {
-        height: 160px;
-      }
-    }
 
-    @media (max-width: 600px) {
-      body {
-        padding: 10px;
-      }
       .container {
-        flex-direction: column;
-        align-items: center;
+        max-width: 100%;
+        gap: 20px;
       }
+
       .card {
-        width: 90vw;
+        width: 100%;
       }
+
       .video-wrapper {
-        height: 200px;
+        height: 180px;
+      }
+
+      .title {
+        font-size: 1.4rem;
+      }
+
+      .price {
+        font-size: 1.8rem;
+      }
+
+      .buy-btn {
+        font-size: 1.1rem;
+        padding: 12px 0;
       }
     }
   </style>
 </head>
 <body>
+
+  <dotlottie-wc 
+    src="https://lottie.host/e8e21b3d-18f4-45ce-a24f-19a2a5be16e5/6PJt9ASQyK.lottie" 
+    speed="1" autoplay loop
+  ></dotlottie-wc>
 
   <div class="container">
     <div class="card" onclick="goToLink()">
