--- a/track.html
+++ b/track.html
@@ -16,62 +16,68 @@
       padding: 0;
       height: 100%;
       font-family: 'Cairo', sans-serif;
+      background: #fff; /* خلفية بيضاء */
+      color: #222;
       overflow-x: hidden;
-      background: #000; /* اسود خلفية احتياطية */
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      padding: 20px;
-      min-height: 100vh;
-      position: relative;
+      scroll-behavior: smooth;
     }
 
-    /* الخلفية Lottie */
+    /* خلفية اللوتي صغيرة وشفافة */
     dotlottie-wc {
       position: fixed;
-      top: 50%;
+      top: 20px;
       left: 50%;
-      width: 100vw !important;
-      height: 100vh !important;
-      transform: translate(-50%, -50%);
+      width: 300px !important;
+      height: 300px !important;
+      transform: translateX(-50%);
       z-index: -1;
       opacity: 0.15;
       pointer-events: none;
       user-select: none;
     }
 
-    .container {
-      width: 100%;
-      max-width: 400px;
-      display: flex;
-      flex-direction: column;
-      gap: 25px;
+    /* الحاوية مع خاصية scroll snap */
+    .container-wrapper {
+      margin-top: 60px;
+      max-width: 420px;
+      height: calc(100vh - 80px);
+      margin-left: auto;
+      margin-right: auto;
+      overflow-y: auto;
+      scroll-snap-type: y mandatory;
       padding-bottom: 40px;
     }
 
+    .container {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      padding: 0 15px;
+    }
+
     .card {
-      background: rgba(0,0,0,0.6);
+      background: #f9f9f9;
       border-radius: 20px;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.9);
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
       cursor: pointer;
       overflow: hidden;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
       display: flex;
       flex-direction: column;
+      scroll-snap-align: start;
       width: 100%;
     }
 
     .card:hover {
-      transform: scale(1.05);
-      box-shadow: 0 15px 40px rgba(255, 255, 255, 0.5);
+      transform: scale(1.03);
+      box-shadow: 0 10px 35px rgba(0, 0, 0, 0.15);
       z-index: 10;
     }
 
     .video-wrapper {
       position: relative;
       width: 100%;
-      height: 220px;
+      height: 200px;
       overflow: hidden;
       border-top-left-radius: 20px;
       border-top-right-radius: 20px;
@@ -90,69 +96,81 @@
     }
 
     .info {
-      padding: 20px;
+      padding: 15px 20px 25px 20px;
       text-align: center;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      gap: 12px;
+      gap: 8px;
     }
 
     .title {
-      font-size: 1.6rem;
+      font-size: 1.5rem;
       font-weight: 700;
+      color: #222;
     }
 
     .price {
-      font-size: 2.2rem;
+      font-size: 2rem;
       font-weight: 900;
-      color: #ffcc00;
+      color: #ff9900;
     }
 
     .buy-btn {
-      background: #ffcc00;
-      color: #222;
-      padding: 14px 0;
+      background: #ff9900;
+      color: #fff;
+      padding: 12px 0;
       border-radius: 15px;
       font-weight: 700;
-      font-size: 1.3rem;
+      font-size: 1.2rem;
       transition: background 0.3s ease;
       user-select: none;
+      box-shadow: 0 3px 8px rgba(255,153,0,0.6);
     }
 
     .buy-btn:hover {
-      background: #ffaa00;
+      background: #e68a00;
     }
 
+    /* العنوان فوق الكروت */
+    h2 {
+      text-align: center;
+      font-size: 2rem;
+      font-weight: 800;
+      margin-top: 20px;
+      color: #222;
+      letter-spacing: 1px;
+      text-shadow: 0 1px 2px rgba(0,0,0,0.1);
+    }
+
+    /* موبايل */
     @media (max-width: 480px) {
-      body, html {
-        padding: 15px 10px;
-      }
-
-      .container {
+      .container-wrapper {
         max-width: 100%;
-        gap: 20px;
-      }
-
-      .card {
-        width: 100%;
+        height: 100vh;
+        padding-bottom: 20px;
       }
 
       .video-wrapper {
-        height: 180px;
+        height: 160px;
       }
 
       .title {
-        font-size: 1.4rem;
+        font-size: 1.3rem;
       }
 
       .price {
-        font-size: 1.8rem;
+        font-size: 1.6rem;
       }
 
       .buy-btn {
-        font-size: 1.1rem;
-        padding: 12px 0;
+        font-size: 1rem;
+        padding: 10px 0;
+      }
+
+      h2 {
+        font-size: 1.6rem;
+        margin-top: 15px;
       }
     }
   </style>
@@ -164,37 +182,41 @@
     speed="1" autoplay loop
   ></dotlottie-wc>
 
-  <div class="container">
-    <div class="card" onclick="goToLink()">
-      <div class="video-wrapper">
-        <video src="https://files.catbox.moe/lgvvn8.mp4" autoplay muted loop playsinline></video>
-      </div>
-      <div class="info">
-        <div class="title">مذكرات الصف الثالث الثانوي</div>
-        <div class="price">100 جنيه</div>
-        <div class="buy-btn">شراء الآن</div>
-      </div>
-    </div>
+  <h2>اشتري من عندنا</h2>
 
-    <div class="card" onclick="goToLink()">
-      <div class="video-wrapper">
-        <video src="https://files.catbox.moe/lgvvn8.mp4" autoplay muted loop playsinline></video>
+  <div class="container-wrapper">
+    <div class="container">
+      <div class="card" onclick="goToLink()">
+        <div class="video-wrapper">
+          <video src="https://files.catbox.moe/lgvvn8.mp4" autoplay muted loop playsinline></video>
+        </div>
+        <div class="info">
+          <div class="title">مذكرات الصف الثالث الثانوي</div>
+          <div class="price">100 جنيه</div>
+          <div class="buy-btn">شراء الآن</div>
+        </div>
       </div>
-      <div class="info">
-        <div class="title">مذكرات الصف الثاني الثانوي</div>
-        <div class="price">80 جنيه</div>
-        <div class="buy-btn">شراء الآن</div>
-      </div>
-    </div>
 
-    <div class="card" onclick="goToLink()">
-      <div class="video-wrapper">
-        <video src="https://files.catbox.moe/lgvvn8.mp4" autoplay muted loop playsinline></video>
+      <div class="card" onclick="goToLink()">
+        <div class="video-wrapper">
+          <video src="https://files.catbox.moe/lgvvn8.mp4" autoplay muted loop playsinline></video>
+        </div>
+        <div class="info">
+          <div class="title">مذكرات الصف الثاني الثانوي</div>
+          <div class="price">80 جنيه</div>
+          <div class="buy-btn">شراء الآن</div>
+        </div>
       </div>
-      <div class="info">
-        <div class="title">اكودنا</div>
-        <div class="price">120 جنيه</div>
-        <div class="buy-btn">شراء الآن</div>
+
+      <div class="card" onclick="goToLink()">
+        <div class="video-wrapper">
+          <video src="https://files.catbox.moe/lgvvn8.mp4" autoplay muted loop playsinline></video>
+        </div>
+        <div class="info">
+          <div class="title">اكودنا</div>
+          <div class="price">120 جنيه</div>
+          <div class="buy-btn">شراء الآن</div>
+        </div>
       </div>
     </div>
   </div>
