--- a/track.html
+++ b/track.html
@@ -2,6 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>منتجات مع خلفية Lottie وكروت فيديو</title>
   <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
   <style>
@@ -16,71 +17,78 @@
       padding: 0;
       height: 100%;
       font-family: 'Cairo', sans-serif;
-      background: #fff; /* خلفية بيضاء */
+      background: #fff;
       color: #222;
       overflow-x: hidden;
-      scroll-behavior: smooth;
     }
 
-    /* خلفية اللوتي صغيرة وشفافة */
-    dotlottie-wc {
-      position: fixed;
-      top: 20px;
-      left: 50%;
-      width: 300px !important;
-      height: 300px !important;
-      transform: translateX(-50%);
-      z-index: -1;
-      opacity: 0.15;
-      pointer-events: none;
-      user-select: none;
-    }
-
-    /* الحاوية مع خاصية scroll snap */
+    /* الحاوية اللي بتعمل scroll snap عمودي */
     .container-wrapper {
-      margin-top: 60px;
-      max-width: 420px;
-      height: calc(100vh - 80px);
-      margin-left: auto;
-      margin-right: auto;
-      overflow-y: auto;
+      height: 100vh;
+      max-width: 480px;
+      margin: 0 auto;
+      overflow-y: scroll;
       scroll-snap-type: y mandatory;
-      padding-bottom: 40px;
+      -webkit-overflow-scrolling: touch;
+    }
+
+    /* اللوتي فوق العنوان بشكل متوسط */
+    .lottie-wrapper {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      margin-top: 15px;
+    }
+    .lottie-wrapper dotlottie-wc {
+      width: 150px !important;
+      height: 150px !important;
+      opacity: 0.3;
+    }
+
+    h2 {
+      text-align: center;
+      font-size: 2rem;
+      font-weight: 800;
+      margin: 10px 0 20px;
+      color: #222;
+      letter-spacing: 1px;
+      text-shadow: 0 1px 2px rgba(0,0,0,0.1);
     }
 
     .container {
       display: flex;
       flex-direction: column;
-      gap: 15px;
-      padding: 0 15px;
+      gap: 25px;
+      padding-bottom: 40px;
     }
 
+    /* كل كارت ياخد شاشة كاملة */
     .card {
-      background: #f9f9f9;
-      border-radius: 20px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-      cursor: pointer;
-      overflow: hidden;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      display: flex;
-      flex-direction: column;
       scroll-snap-align: start;
       width: 100%;
+      height: 90vh;
+      background: #f9f9f9;
+      border-radius: 20px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+      cursor: pointer;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     .card:hover {
-      transform: scale(1.03);
-      box-shadow: 0 10px 35px rgba(0, 0, 0, 0.15);
+      transform: scale(1.02);
+      box-shadow: 0 14px 45px rgba(0, 0, 0, 0.15);
       z-index: 10;
     }
 
     .video-wrapper {
-      position: relative;
-      width: 100%;
-      height: 200px;
-      overflow: hidden;
+      flex: 1 1 auto;
       border-top-left-radius: 20px;
       border-top-right-radius: 20px;
+      overflow: hidden;
+      position: relative;
     }
 
     .video-wrapper video {
@@ -96,22 +104,26 @@
     }
 
     .info {
-      padding: 15px 20px 25px 20px;
+      padding: 20px 25px;
       text-align: center;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      gap: 8px;
+      gap: 12px;
+      background: #fff;
+      border-bottom-left-radius: 20px;
+      border-bottom-right-radius: 20px;
+      box-shadow: 0 -3px 10px rgba(0,0,0,0.05);
     }
 
     .title {
-      font-size: 1.5rem;
+      font-size: 1.8rem;
       font-weight: 700;
       color: #222;
     }
 
     .price {
-      font-size: 2rem;
+      font-size: 2.4rem;
       font-weight: 900;
       color: #ff9900;
     }
@@ -119,68 +131,30 @@
     .buy-btn {
       background: #ff9900;
       color: #fff;
-      padding: 12px 0;
-      border-radius: 15px;
+      padding: 16px 0;
+      border-radius: 20px;
       font-weight: 700;
-      font-size: 1.2rem;
+      font-size: 1.4rem;
       transition: background 0.3s ease;
       user-select: none;
-      box-shadow: 0 3px 8px rgba(255,153,0,0.6);
+      box-shadow: 0 4px 12px rgba(255,153,0,0.6);
+      margin-top: 10px;
     }
 
     .buy-btn:hover {
       background: #e68a00;
     }
 
-    /* العنوان فوق الكروت */
-    h2 {
-      text-align: center;
-      font-size: 2rem;
-      font-weight: 800;
-      margin-top: 20px;
-      color: #222;
-      letter-spacing: 1px;
-      text-shadow: 0 1px 2px rgba(0,0,0,0.1);
-    }
-
-    /* موبايل */
-    @media (max-width: 480px) {
-      .container-wrapper {
-        max-width: 100%;
-        height: 100vh;
-        padding-bottom: 20px;
-      }
-
-      .video-wrapper {
-        height: 160px;
-      }
-
-      .title {
-        font-size: 1.3rem;
-      }
-
-      .price {
-        font-size: 1.6rem;
-      }
-
-      .buy-btn {
-        font-size: 1rem;
-        padding: 10px 0;
-      }
-
-      h2 {
-        font-size: 1.6rem;
-        margin-top: 15px;
-      }
-    }
   </style>
 </head>
 <body>
 
-  <dotlottie-wc 
-    src="https://lottie.host/e8e21b3d-18f4-45ce-a24f-19a2a5be16e5/6PJt9ASQyK.lottie" 
-    speed="1" autoplay loop
-  ></dotlottie-wc>
+  <div class="lottie-wrapper">
+    <dotlottie-wc 
+      src="https://lottie.host/e8e21b3d-18f4-45ce-a24f-19a2a5be16e5/6PJt9ASQyK.lottie" 
+      speed="1" autoplay loop
+    ></dotlottie-wc>
+  </div>
 
   <h2>اشتري من عندنا</h2>
 
