--- a/start.html
+++ b/start.html
@@ -201,7 +201,7 @@
       <a href="contact.html" class="button-link">الامتحانات 📝</a>
       <a href="track.html" class="button-link">اشتري من عندنا 🛒</a>
       <a href="contact.html" class="button-link">اسألنا سؤال 📞</a>
-      <a href="https://www.mrfaisal.net/%D8%A7%D9%84%D8%B4%D9%83%D8%A7%D9%88%D9%8A" class="button-link">الشكاوي 📣</a>
+      <a href="admin.html" class="button-link">الشكاوي 📣</a>
     </div>
   </div>
 </body>
